--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Generate Workflow File
         run: |
-          echo "name: Dynamic Generated Workflow" >  ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
+          echo "name: Dynamic Generated Workflow" >   /./github/workflows/generated_workflow.yml
           echo "on:" >> ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
           echo "  push:" >> ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
           echo "    branches:" >> ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
@@ -24,4 +24,4 @@ jobs:
           echo "       - run: echo Hello, World!" >> ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
 
       - name: Dispatch Generated Workflow
-        uses: "${{GITHUB_WORKSPACE}}/./github/workflows/generated_workflow.yml"
+        uses: ./github/workflows/generated_workflow.yml
