--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Generate Workflow File
         run: |
-          echo "name: Dynamic Generated Workflow" >   ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
+          touch ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
+          echo "name: Dynamic Generated Workflow" > ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
           echo "on:" >> ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
           echo "  push:" >> ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
           echo "    branches:" >> ${GITHUB_WORKSPACE}/./github/workflows/generated_workflow.yml
