--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,19 +10,19 @@ jobs:
       - uses: actions/checkout@v4
       - name: Generate Workflow File
         run: |
-          touch ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "name: Dynamic Generated Workflow" > ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "on:" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "  push:" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "    branches:" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "      - main" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "jobs:" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "  build:" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "    runs-on: ubuntu-latest" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "    steps:" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "      - name: Checkout" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "        uses: actions/checkout@v4" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
-          echo "       - run: echo Hello, World!" >> ${GITHUB_WORKSPACE}/github/workflows/generated_workflow.yml
+          touch ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "name: Dynamic Generated Workflow" > ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "on:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "  push:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "    branches:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "      - main" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "jobs:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "  build:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "    runs-on: ubuntu-latest" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "    steps:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "      - name: Checkout" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "        uses: actions/checkout@v4" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "       - run: echo Hello, World!" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
 
       - name: Dispatch Generated Workflow
         uses: ./github/workflows/generated_workflow.yml
