--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,17 +13,14 @@ jobs:
           touch ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
           echo "name: Dynamic Generated Workflow" > ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
           echo "on:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
-          echo "  push:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
-          echo "    branches:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
-          echo "      - main" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "  workflow_call:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
           echo "jobs:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
           echo "  build:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
           echo "    runs-on: ubuntu-latest" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
           echo "    steps:" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
-          echo "      - name: Checkout" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
-          echo "        uses: actions/checkout@v4" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
-          echo "       - run: echo Hello, World!" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
+          echo "      - run: echo Hello, World!" >> ${GITHUB_WORKSPACE}/.github/workflows/generated_workflow.yml
 
   run-dynamic:
-    needs: generate-workflow
-    uses: ./github/workflows/generated_workflow.yml
+    needs:
+      - generate-workflow
+    uses: ./.github/workflows/generated_workflow.yml
