update workflow for testing

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,4 +12,6 @@ jobs:
   run-dynamic:
     needs:
       - generate-workflow
-    uses: ./.generated-dynamic-dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ./.generated-dynamic-dependencies
