--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,4 +14,6 @@ jobs:
       - generate-workflow
     runs-on: ubuntu-latest
     steps:
+      - run: ls -latr
+        shell: bash
       - uses: ./.generated-dynamic-dependencies
