update workflow for testing

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,4 +9,4 @@ jobs:
       - uses: cloudposse/github-action-atmos-dependencies-test@feature/initial-implementation
         with:
           levels: 2
-      - uses: ./generated-dynamic-dependencies
+      - uses: ./.generated-dynamic-dependencies
