--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,8 +13,10 @@ jobs:
         with:
           name: generated-dynamic-dependencies
           path: ./.generated-dynamic-dependencies
+
   run-workflow:
     runs-on: ubuntu-latest
+    needs: generate-workflow
     steps:
       - uses: actions/upload-artifact@v4
         with:
