--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: generate-workflow
     steps:
-      - uses: actions/upload-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           name: generated-dynamic-dependencies
           path: ./.generated-dynamic-dependencies
