--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,9 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: cloudposse/github-action-atmos-dependencies-test@feature/initial-implementation
-        with:
-          levels: 2
+      - uses: ./github/workflows/create-dynamic
       - uses: actions/upload-artifact@v4
         with:
           name: generated-dynamic-dependencies
@@ -31,4 +29,4 @@ jobs:
         with:
           name: generated-dynamic-dependencies
           path: ./.generated-dynamic-dependencies
-      - uses: ./.generated-dynamic-dependencies/${{ matrix.root }}/${{ matrix.name }}
+      - uses: ./.generated-dynamic-dependencies/component1
