--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/workflows/create-dynamic.yaml
+      - uses: mcalhoun/test-workflow/.github/workflows/create-dynamic
       - uses: actions/upload-artifact@v4
         with:
           name: generated-dynamic-dependencies
