--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,14 +14,30 @@ jobs:
           name: generated-dynamic-dependencies
           path: ./.generated-dynamic-dependencies
   run-workflow:
-    needs: generate-workflow
-    uses: ./.generated-dynamic-dependencies
-  # run-workflow:
-  #   runs-on: ubuntu-latest
-  #   needs: generate-workflow
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: generated-dynamic-dependencies
-  #         path: ./.generated-dynamic-dependencies
-  #     - uses: ./.generated-dynamic-dependencies
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - root: component1
+            component: component1
+            stack: dev
+          - root: component1
+            component: component2
+            stack: dev
+          - root: component1
+            component: component3
+            stack: dev
+          - root: component4
+            component: component5
+            stack: dev
+          - root: component4
+            component: component6
+            stack: dev
+          - root: component4
+            component: component7
+            stack: dev
+    concurrency: ${{matrix.root}}
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo "atmos terraform plan ${{matrix.component}} -s ${{matrix.stack}}"
+        shell: bash
