--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,7 @@ jobs:
           name: generated-dynamic-dependencies
           path: ./.generated-dynamic-dependencies
   run-workflow:
+    name: plan ${{matrix.component}} -s ${{matrix.stack}}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -42,4 +43,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: echo "atmos terraform plan ${{matrix.component}} -s ${{matrix.stack}}"
+        shell: bash
+      - run: echo "atmos terraform apply ${{matrix.component}} -s ${{matrix.stack}}"
         shell: bash
