--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
           name: generated-dynamic-dependencies
           path: ./.generated-dynamic-dependencies
   run-workflow:
-    name: plan ${{matrix.component}} -s ${{matrix.stack}}
+    name: ${{matrix.component}} -s ${{matrix.stack}} plan & apply
     runs-on: ubuntu-latest
     strategy:
       matrix:
