--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,19 +2,8 @@ name: Dynamic Workflow Dispatcher
 on:
   workflow_dispatch:
 jobs:
-  generate-workflow:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: cloudposse/github-action-atmos-dependencies-test@feature/initial-implementation
-        with:
-          levels: 2
-      - uses: actions/upload-artifact@v4
-        with:
-          name: generated-dynamic-dependencies
-          path: ./.generated-dynamic-dependencies
   run-workflow:
-    name: ${{matrix.component}} -s ${{matrix.stack}} plan & apply
+    name: ${{matrix.component}}/${{matrix.stack}} plan & apply
     runs-on: ubuntu-latest
     strategy:
       matrix:
