--- a/.github/workflows/atmos.yaml
+++ b/.github/workflows/atmos.yaml
@@ -3,6 +3,8 @@ run-name: plan ${{ github.event.inputs.component }}/${{ github.event.inputs.stac
 on:
   workflow_dispatch:
     inputs:
+      sha:
+        type: string
       component:
         type: string
       stack:
