--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,14 +9,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: dump comntext
+      - name: dump context
         shell: bash
         run: |
           echo '${{ toJSON(github) }}'
+      - name: Set COMMIT_SHA for pull request or release
+        id: set-sha
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "COMMIT_SHA=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
+          elif [[ "${{ github.event_name }}" == "release" ]]; then
+            echo "COMMIT_SHA=${{ github.sha }}" >> $GITHUB_ENV
+          fi
+
       - name: affected
         shell: bash
-        env:
-          PR_COMMIT_SHA: ${{ github.sha }}
         run: |
           set -x -e
           cat affected.template.json|envsubst > affected.json
